--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,3 +15,6 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          template: repository
+          user: maureendadap
+          repo: metrics
