--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -15,3 +15,7 @@ jobs:
           USERNAME: MaureenDadap
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          COMMIT_BY_ME: true
+          SHOW_PROFILE_VIEWS: false
+          SHOW_OS: false
+          SHOW_LOC_CHART: false
