--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,3 +18,4 @@ jobs:
           filename: metrics.classic.svg
           base: header, repositories
           plugin_lines: yes
+          username: MaureenDadap
