--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
-          #USERNAME: MaureenDadap
+          COMMIT_USERNAME: MaureenDadap
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          COMMIT_BY_ME: "True"
+          #COMMIT_BY_ME: "True"
           SHOW_PROFILE_VIEWS: "False"
           SHOW_OS: "False"
           SHOW_LOC_CHART: "False"
