--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -17,5 +17,5 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           COMMIT_BY_ME: "True"
           SHOW_PROFILE_VIEWS: "False"
-          SHOW_OS: "False"
+          #SHOW_OS: "False"
           SHOW_LOC_CHART: "False"
